--- a/app/src/main/res/layout/bombay_adda_home.xml
+++ b/app/src/main/res/layout/bombay_adda_home.xml
@@ -377,7 +377,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="@font/aladin"
-                android:text="ARK 2.0"
+                android:text="Bombay Adda"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat"
                 android:textColor="@android:color/darker_gray"
