--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -50,6 +50,7 @@
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textAllCaps="false"
+                android:textColor="@color/gold"
                 android:textSize="46sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/logo"
