--- a/app/src/main/res/layout/sign__in__screen.xml
+++ b/app/src/main/res/layout/sign__in__screen.xml
@@ -72,12 +72,24 @@
             android:drawableLeft="@drawable/googleg_standard_color_18"
             android:drawablePadding="20dp"
             android:elevation="5dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:text="Sign-In"
             android:textColor="@color/gold"
-            android:textSize="18sp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"/>
+            android:textSize="18sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="For any queries contact us at : teamBoG@gmail.com"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
